src/objects/NTT_History__c.object
<CustomObject>
    <description>All the tracking history for each Item Id will be saved in this object</description>
    <fields>
        <fullName>CaseProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseProduct</label>
        <referenceTo>CaseProduct__c</referenceTo>
        <relationshipName>NTT_History_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Code__c</fullName>
        <label>Event Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Description__c</fullName>
        <label>Event Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Time__c</fullName>
        <label>Event Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IsLatest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set check box on the latest tracking event.</description>
        <label>IsLatest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Id__c</fullName>
        <label>Item Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastScanUser__c</fullName>
        <label>Scan User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Event_Code__c</fullName>
        <label>Local Event Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Id__c</fullName>
        <label>Location Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <label>Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Summary of location data (TEST)</description>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Tracking Events</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Tracking Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracking Events</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>